# minidb

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yaml
src/minidb/: __init__.py
src/minidb/client/: __main__.py  main.py
src/minidb/server/: __main__.py  commands.py  main.py  protocol.py
tests/: test_protocol.py
