[project]
name = "minidb"
version = "0.1.0"
description = "Learning project: build a small server database in Python"
readme = "README.md"
authors = [
    { name = "murali", email = "muralimittireddy1234@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
minidb = "minidb:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
